--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,29 +1,55 @@
-name: Static Build
+name: Build VUE App 🛠️
 
 on:
   push:
-    branches:
-      - production
+    branches: ["main"]
+
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-  deploy-client:
+  pages_deploy:
+    # Defines the deployment environment and URL for the GitHub Pages deployment.
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
 
+    if: contains(github.event.head_commit.message, 'deploy')
+
     steps:
-      - name: Checkout repository 👀
-        uses: actions/checkout@v4
+      - name: Checkout code 👀
+        uses: actions/checkout@v3
 
-      - name: Build the Client 🏗️
-        run: |
-          npm ci && npm run build
-
-      - name: Pushes to another repository
-        uses: cpina/github-action-push-to-another-repository@main
-        env:
-          API_TOKEN_GITHUB: ${{ secrets.API_TOKEN_GITHUB }}
+      # Set up Node.js environment with a specific version (22).
+      - name: Set up Node.js 🛠️
+        uses: actions/setup-node@v3
         with:
-          source-directory: "/dist"
-          destination-github-username: "${{ secrets.GH_USERNAME }}"
-          destination-repository-name: "${{ secrets.GH_REPO }}"
-          user-email: ${{ secrets.GH_EMAIL }}
-          target-branch: main
+          node-version: 22
+
+      - name: Install dependencies 📦
+        working-directory: ./ # Specify the folder where the app code resides (./client for fullstack applications).
+        run: npm ci # Clean install of the project's dependencies.
+
+      # Build the VUE application
+      - name: Build the app 🏗️
+        working-directory: ./
+        run: npm run build # Runs the 'build' script defined in the package.json file
+
+      # Configure the GitHub Pages deployment
+      - name: Setup Pages 📃
+        uses: actions/configure-pages@v4
+
+      # Uploads the build output for deployment to GitHub Pages.
+      - name: Upload artifact ⬆️
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: "./docs" # Path to the built app's static files, this can be configured in the `vite.config` file with 'outputDir'
+
+      # Deploy the application to GitHub Pages using the 'deploy-pages' pre-build action.
+      - name: Deploy to GitHub Pages ✨
+        id: deployment
+        uses: actions/deploy-pages@v4
