--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@ name: Build VUE App 🛠️
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
 
 # Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
 permissions:
@@ -17,8 +18,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-
-    if: contains(github.event.head_commit.message, 'deploy')
 
     steps:
       - name: Checkout code 👀
