--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,11 @@ jobs:
         working-directory: ./ # Specify the folder where the app code resides (./client for fullstack applications).
         run: npm ci # Clean install of the project's dependencies.
 
+      # Process gallery images to generate thumbnails and blur hashes
+      - name: Process Gallery Images 🖼️
+        working-directory: ./
+        run: npm run process-images
+
       # Build the VUE application
       - name: Build the app 🏗️
         working-directory: ./
