--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    if: contains(github.event.head_commit.message, 'deploy') || contains(github.event.head_commit.message, 'publish')
 
     steps:
       - name: Checkout code 👀
