--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "serve": "vite",
     "build": "vite build",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "download-gallery": "node src/utils/downloadGalleryImages.js",
-    "download-gallery:force": "node src/utils/downloadGalleryImages.js --force",
-    "download-gallery:dry": "node src/utils/downloadGalleryImages.js --dry-run",
+    "download-gallery": "dotenv node src/utils/downloadGalleryImages.js",
+    "download-gallery:force": "dotenv node src/utils/downloadGalleryImages.js --force",
+    "download-gallery:dry": "dotenv node src/utils/downloadGalleryImages.js --dry-run",
     "process-images": "node src/utils/processGalleryImages.js"
   },
   "type": "module",
@@ -28,6 +28,7 @@
     "@vitejs/plugin-vue": "^6.0.3",
     "@vitejs/plugin-vue-jsx": "^5.1.3",
     "@vue/eslint-config-standard": "^8.0.1",
+    "dotenv-cli": "^7.4.2",
     "eslint": "8.57.1",
     "eslint-plugin-vue": "^9.18.1",
     "sass": "1.97.1",
