--- a/public/gallery/downloadManifest.json
+++ b/public/gallery/downloadManifest.json
@@ -4,251 +4,287 @@
     "filename": "BaronDauntek_4K.png",
     "filePath": "concept art\\BaronDauntek_4K.png",
     "size": "7073062",
-    "downloadedAt": "2026-01-16T04:15:30.365Z"
+    "modifiedTime": "2023-03-14T06:14:00.694Z",
+    "downloadedAt": "2026-01-19T15:52:50.720Z"
   },
   "1cbg47OKWsR7RDmv_NRMXyTExW3SjlOA9": {
     "fileId": "1cbg47OKWsR7RDmv_NRMXyTExW3SjlOA9",
     "filename": "creaturesandcharacters-p1-portfolio06.jpg",
     "filePath": "concept art\\creaturesandcharacters-p1-portfolio06.jpg",
     "size": "8315028",
-    "downloadedAt": "2026-01-16T04:15:31.591Z"
+    "modifiedTime": "2025-04-03T04:31:17.275Z",
+    "downloadedAt": "2026-01-19T15:52:52.269Z"
   },
   "1KOIUHwLb5DYE3Bj3TEx00lhWsaYY9uY0": {
     "fileId": "1KOIUHwLb5DYE3Bj3TEx00lhWsaYY9uY0",
     "filename": "CreaturesandCharacters-SkinandBones-2-Final.jpg",
     "filePath": "concept art\\CreaturesandCharacters-SkinandBones-2-Final.jpg",
     "size": "7809994",
-    "downloadedAt": "2026-01-16T04:15:32.520Z"
+    "modifiedTime": "2025-04-03T04:12:01.522Z",
+    "downloadedAt": "2026-01-19T15:52:53.637Z"
   },
   "19So_vahQTym4y_IynPX3SEYnMWQMVor2": {
     "fileId": "19So_vahQTym4y_IynPX3SEYnMWQMVor2",
     "filename": "Dreglands_Concept.jpg",
     "filePath": "concept art\\Dreglands_Concept.jpg",
     "size": "5369491",
-    "downloadedAt": "2026-01-16T04:15:33.178Z"
+    "modifiedTime": "2023-07-25T23:09:11.826Z",
+    "downloadedAt": "2026-01-19T15:52:54.667Z"
   },
   "16tV92pEq3n5VlzfzdQnRCFivFojb4eNs": {
     "fileId": "16tV92pEq3n5VlzfzdQnRCFivFojb4eNs",
     "filename": "Imps_ConceptArt_Green.png",
     "filePath": "concept art\\Imps_ConceptArt_Green.png",
     "size": "6271064",
-    "downloadedAt": "2026-01-16T04:15:34.041Z"
+    "modifiedTime": "2026-01-04T20:28:21.487Z",
+    "downloadedAt": "2026-01-19T15:52:55.878Z"
   },
   "1bh9TQNtsc6_inCRrxgEzgoHyV174sr9c": {
     "fileId": "1bh9TQNtsc6_inCRrxgEzgoHyV174sr9c",
     "filename": "Imps_ConceptArt_Purple.png",
     "filePath": "concept art\\Imps_ConceptArt_Purple.png",
     "size": "6117908",
-    "downloadedAt": "2026-01-16T04:15:35.095Z"
+    "modifiedTime": "2026-01-04T20:26:43.269Z",
+    "downloadedAt": "2026-01-19T15:52:56.781Z"
   },
   "17bBAE2BvU1wlyzFScSgU__AJR1IjtlPt": {
     "fileId": "17bBAE2BvU1wlyzFScSgU__AJR1IjtlPt",
     "filename": "Imps_ConceptArt_Red.png",
     "filePath": "concept art\\Imps_ConceptArt_Red.png",
     "size": "5900551",
-    "downloadedAt": "2026-01-16T04:15:36.138Z"
+    "modifiedTime": "2026-01-04T20:27:31.784Z",
+    "downloadedAt": "2026-01-19T15:52:57.794Z"
   },
   "1CSkR7vZLaGEG5cDVNwovgQtDYKIqY0Wm": {
     "fileId": "1CSkR7vZLaGEG5cDVNwovgQtDYKIqY0Wm",
     "filename": "joe-tripplejaz-zavaletta-lol-champ-sheet-page1.jpg",
     "filePath": "concept art\\joe-tripplejaz-zavaletta-lol-champ-sheet-page1.jpg",
     "size": "279789",
-    "downloadedAt": "2026-01-16T04:15:36.578Z"
+    "modifiedTime": "2025-12-04T00:18:44.405Z",
+    "downloadedAt": "2026-01-19T15:52:58.524Z"
   },
   "1Z4qwHbJiSpMHJgpmDUfE23MYHBsIRPTm": {
     "fileId": "1Z4qwHbJiSpMHJgpmDUfE23MYHBsIRPTm",
     "filename": "joe-tripplejaz-zavaletta-lol-champ-sheet-page2.jpg",
     "filePath": "concept art\\joe-tripplejaz-zavaletta-lol-champ-sheet-page2.jpg",
     "size": "340246",
-    "downloadedAt": "2026-01-16T04:15:37.129Z"
+    "modifiedTime": "2025-12-04T00:18:47.504Z",
+    "downloadedAt": "2026-01-19T15:52:59.260Z"
   },
   "1XxnuB47T6R7fbh7kUDbinBGLwTrsZyDk": {
     "fileId": "1XxnuB47T6R7fbh7kUDbinBGLwTrsZyDk",
     "filename": "LaeOdeHome.png",
     "filePath": "concept art\\LaeOdeHome.png",
     "size": "8842601",
-    "downloadedAt": "2026-01-16T04:15:37.910Z"
+    "modifiedTime": "2023-04-20T23:23:47.429Z",
+    "downloadedAt": "2026-01-19T15:53:00.403Z"
   },
   "1N0q3W_PS4OJsW6RJyRVO6P8fmxP8OMJO": {
     "fileId": "1N0q3W_PS4OJsW6RJyRVO6P8fmxP8OMJO",
     "filename": "Laeodians.png",
     "filePath": "concept art\\Laeodians.png",
     "size": "6645232",
-    "downloadedAt": "2026-01-16T04:15:38.676Z"
+    "modifiedTime": "2023-04-06T23:55:49.275Z",
+    "downloadedAt": "2026-01-19T15:53:01.662Z"
   },
   "1-diizdDNh0LKcva9g5UqQRGkMtEp1ZvZ": {
     "fileId": "1-diizdDNh0LKcva9g5UqQRGkMtEp1ZvZ",
     "filename": "Machi-CharacterConcept_4K.png",
     "filePath": "concept art\\Machi-CharacterConcept_4K.png",
     "size": "6487293",
-    "downloadedAt": "2026-01-16T04:15:40.018Z"
+    "modifiedTime": "2023-03-14T23:48:01.673Z",
+    "downloadedAt": "2026-01-19T15:53:02.976Z"
   },
   "1yNwhLkP26Jvy1l9f61ItEjEZf-GgRoFT": {
     "fileId": "1yNwhLkP26Jvy1l9f61ItEjEZf-GgRoFT",
     "filename": "MagicPunk-BikeMaker-CharacterDesign-Color.jpg",
     "filePath": "concept art\\MagicPunk-BikeMaker-CharacterDesign-Color.jpg",
     "size": "2962596",
-    "downloadedAt": "2026-01-16T04:15:40.739Z"
+    "modifiedTime": "2025-02-03T03:48:04.600Z",
+    "downloadedAt": "2026-01-19T15:53:03.964Z"
   },
   "1qZwJl1E_BIl8JIhIUCmWlQoPPm1cBPtV": {
     "fileId": "1qZwJl1E_BIl8JIhIUCmWlQoPPm1cBPtV",
     "filename": "MagicPunk-BikeMaker-Color.jpg",
     "filePath": "concept art\\MagicPunk-BikeMaker-Color.jpg",
     "size": "8857882",
-    "downloadedAt": "2026-01-16T04:15:42.758Z"
+    "modifiedTime": "2025-02-03T00:46:01.432Z",
+    "downloadedAt": "2026-01-19T15:53:07.271Z"
   },
   "17e50WGjsQBSWDExOpv1kz2AfIVScl2wf": {
     "fileId": "17e50WGjsQBSWDExOpv1kz2AfIVScl2wf",
     "filename": "MagicPunk_Creature.png",
     "filePath": "concept art\\MagicPunk_Creature.png",
     "size": "5686108",
-    "downloadedAt": "2026-01-16T04:15:43.629Z"
+    "modifiedTime": "2023-04-25T17:47:38.811Z",
+    "downloadedAt": "2026-01-19T15:53:08.209Z"
   },
   "1y5Jz435eADmPCNQowhihRsrKV48G5TrQ": {
     "fileId": "1y5Jz435eADmPCNQowhihRsrKV48G5TrQ",
     "filename": "Mantid_Bow_Portfolio.jpg",
     "filePath": "concept art\\Mantid_Bow_Portfolio.jpg",
     "size": "5688169",
-    "downloadedAt": "2026-01-16T04:15:44.445Z"
+    "modifiedTime": "2024-01-13T01:41:42.205Z",
+    "downloadedAt": "2026-01-19T15:53:09.847Z"
   },
   "1TE1-TieN6Lg7zVx3zcY_O5YFGYM7oUdQ": {
     "fileId": "1TE1-TieN6Lg7zVx3zcY_O5YFGYM7oUdQ",
     "filename": "Mantid_Spear_Portfolio.jpg",
     "filePath": "concept art\\Mantid_Spear_Portfolio.jpg",
     "size": "5128707",
-    "downloadedAt": "2026-01-16T04:15:45.018Z"
+    "modifiedTime": "2024-01-13T01:39:40.065Z",
+    "downloadedAt": "2026-01-19T15:53:11.158Z"
   },
   "1AhmueOl8pzdA-iow0S-YarNGTwSyPZKB": {
     "fileId": "1AhmueOl8pzdA-iow0S-YarNGTwSyPZKB",
     "filename": "Mantid_Sword_Portfolio.jpg",
     "filePath": "concept art\\Mantid_Sword_Portfolio.jpg",
     "size": "5225877",
-    "downloadedAt": "2026-01-16T04:15:46.183Z"
+    "modifiedTime": "2024-01-13T01:40:52.554Z",
+    "downloadedAt": "2026-01-19T15:53:12.062Z"
   },
   "1pEEsuxO7VzQMDXutKBT-E9zfilI0RhdY": {
     "fileId": "1pEEsuxO7VzQMDXutKBT-E9zfilI0RhdY",
     "filename": "MP-MachisBike-4K.png",
     "filePath": "concept art\\MP-MachisBike-4K.png",
     "size": "8026448",
-    "downloadedAt": "2026-01-16T04:15:47.345Z"
+    "modifiedTime": "2023-04-18T06:32:22.049Z",
+    "downloadedAt": "2026-01-19T15:53:13.499Z"
   },
   "1YCL_WvPlqlFMVr1NbPgfgJSutQWzMEyW": {
     "fileId": "1YCL_WvPlqlFMVr1NbPgfgJSutQWzMEyW",
     "filename": "MP_Props.png",
     "filePath": "concept art\\MP_Props.png",
     "size": "6315572",
-    "downloadedAt": "2026-01-16T04:15:48.257Z"
+    "modifiedTime": "2023-04-12T18:47:23.037Z",
+    "downloadedAt": "2026-01-19T15:53:14.610Z"
   },
   "1R29rCngKJLIHXkYkZxEgSgRFoSmOC8gA": {
     "fileId": "1R29rCngKJLIHXkYkZxEgSgRFoSmOC8gA",
     "filename": "Skarper-Character-Sheet-Final01.jpg",
     "filePath": "concept art\\Skarper-Character-Sheet-Final01.jpg",
     "size": "4982277",
-    "downloadedAt": "2026-01-16T04:15:49.178Z"
+    "modifiedTime": "2025-05-08T00:09:01.316Z",
+    "downloadedAt": "2026-01-19T15:53:15.641Z"
   },
   "1ONYW48zwc_FuItgpVp_5SB6k5dENFasT": {
     "fileId": "1ONYW48zwc_FuItgpVp_5SB6k5dENFasT",
     "filename": "Skarper-Character-Sheet-Final02-Gun.jpg",
     "filePath": "concept art\\Skarper-Character-Sheet-Final02-Gun.jpg",
     "size": "4556970",
-    "downloadedAt": "2026-01-16T04:15:50.186Z"
+    "modifiedTime": "2025-04-30T19:17:01.803Z",
+    "downloadedAt": "2026-01-19T15:53:17.249Z"
   },
   "1kYjSrMt8hg4SJIf4N3tT-2IC-OKff4QB": {
     "fileId": "1kYjSrMt8hg4SJIf4N3tT-2IC-OKff4QB",
     "filename": "Skarper-Character-Sheet-Final03-Vehicle.jpg",
     "filePath": "concept art\\Skarper-Character-Sheet-Final03-Vehicle.jpg",
     "size": "4337169",
-    "downloadedAt": "2026-01-16T04:15:50.856Z"
+    "modifiedTime": "2025-04-30T20:00:58.189Z",
+    "downloadedAt": "2026-01-19T15:53:18.321Z"
   },
   "1fz1Dz5uSCIqGdow-K7xyg6JQ9KVZ2Guw": {
     "fileId": "1fz1Dz5uSCIqGdow-K7xyg6JQ9KVZ2Guw",
     "filename": "TheJex.png",
     "filePath": "concept art\\TheJex.png",
     "size": "3090350",
-    "downloadedAt": "2026-01-16T04:15:51.911Z"
+    "modifiedTime": "2023-04-04T00:45:18.870Z",
+    "downloadedAt": "2026-01-19T15:53:19.117Z"
   },
   "1m1BQLggQAujfVNBmIfWYK5zC79wS073j": {
     "fileId": "1m1BQLggQAujfVNBmIfWYK5zC79wS073j",
-    "filename": "Wildcallers_01.jpg",
-    "filePath": "concept art\\Wildcallers_01.jpg",
+    "filename": "0_Wildcallers_01.jpg",
+    "filePath": "concept art\\0_Wildcallers_01.jpg",
     "size": "3129697",
-    "downloadedAt": "2026-01-16T04:15:52.413Z"
+    "modifiedTime": "2026-01-19T15:28:30.865Z",
+    "downloadedAt": "2026-01-19T15:52:49.049Z"
   },
   "1VI-8Qq1ssBouYRHW_OwQwaDXIlurLuI4": {
     "fileId": "1VI-8Qq1ssBouYRHW_OwQwaDXIlurLuI4",
     "filename": "Wildcallers_02.jpg",
     "filePath": "concept art\\Wildcallers_02.jpg",
     "size": "1810529",
-    "downloadedAt": "2026-01-16T04:15:53.162Z"
+    "modifiedTime": "2026-01-04T20:11:08.062Z",
+    "downloadedAt": "2026-01-19T15:53:20.070Z"
   },
   "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw": {
     "fileId": "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw",
-    "filename": "Wildcallers_03.jpg",
-    "filePath": "concept art\\Wildcallers_03.jpg",
+    "filename": "1_Wildcallers_03.jpg",
+    "filePath": "concept art\\1_Wildcallers_03.jpg",
     "size": "1942872",
-    "downloadedAt": "2026-01-16T04:15:54.031Z"
+    "modifiedTime": "2026-01-19T15:54:26.910Z",
+    "downloadedAt": "2026-01-19T15:54:50.293Z"
   },
   "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me": {
     "fileId": "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me",
     "filename": "Wildcallers_Exploration-043.jpg",
     "filePath": "concept art\\Wildcallers_Exploration-043.jpg",
     "size": "2846128",
-    "downloadedAt": "2026-01-16T04:15:54.657Z"
+    "modifiedTime": "2026-01-04T20:11:15.619Z",
+    "downloadedAt": "2026-01-19T15:53:21.729Z"
   },
   "1n20Fme75yruBYtCMPtjiOfjgNSo132nM": {
     "fileId": "1n20Fme75yruBYtCMPtjiOfjgNSo132nM",
     "filename": "Fairy slug_UPDATE.jpg",
     "filePath": "paintings\\Fairy slug_UPDATE.jpg",
     "size": "2039371",
-    "downloadedAt": "2026-01-16T04:15:55.201Z"
+    "modifiedTime": "2023-01-21T23:42:12.921Z",
+    "downloadedAt": "2026-01-19T15:53:22.455Z"
   },
   "1i2lPgknl1lSlPtEn9BJ0w8RgVC9zQLeU": {
     "fileId": "1i2lPgknl1lSlPtEn9BJ0w8RgVC9zQLeU",
     "filename": "Fealty.jpg",
     "filePath": "paintings\\Fealty.jpg",
     "size": "18194422",
-    "downloadedAt": "2026-01-16T04:15:57.793Z"
+    "modifiedTime": "2024-02-16T22:46:28.208Z",
+    "downloadedAt": "2026-01-19T15:53:24.151Z"
   },
   "1KVCtM-fkmLy2B9dxBn8XFAn6R-pF12mW": {
     "fileId": "1KVCtM-fkmLy2B9dxBn8XFAn6R-pF12mW",
     "filename": "Flying.jpg",
     "filePath": "paintings\\Flying.jpg",
     "size": "9150848",
-    "downloadedAt": "2026-01-16T04:15:58.801Z"
+    "modifiedTime": "2023-01-21T20:34:11.537Z",
+    "downloadedAt": "2026-01-19T15:53:25.561Z"
   },
   "1SzkNtS5wFPP-iAgP6-CnvH7pE7r7tdF7": {
     "fileId": "1SzkNtS5wFPP-iAgP6-CnvH7pE7r7tdF7",
     "filename": "FlyingMen.jpg",
     "filePath": "paintings\\FlyingMen.jpg",
     "size": "4434910",
-    "downloadedAt": "2026-01-16T04:15:59.618Z"
+    "modifiedTime": "2024-03-22T22:12:52.644Z",
+    "downloadedAt": "2026-01-19T15:53:26.717Z"
   },
   "1R_OZrJBL1qlY27opiu8wyKV3rOXprOdW": {
     "fileId": "1R_OZrJBL1qlY27opiu8wyKV3rOXprOdW",
     "filename": "Globin_Small.jpg",
     "filePath": "paintings\\Globin_Small.jpg",
     "size": "8236574",
-    "downloadedAt": "2026-01-16T04:16:00.870Z"
+    "modifiedTime": "2023-11-14T08:47:22.649Z",
+    "downloadedAt": "2026-01-19T15:53:27.971Z"
   },
   "1puTjWFzlwq-3mEe7zktK343osfwMOFFe": {
     "fileId": "1puTjWFzlwq-3mEe7zktK343osfwMOFFe",
     "filename": "Machi-SplashKA_FINAL.jpg",
     "filePath": "paintings\\Machi-SplashKA_FINAL.jpg",
     "size": "5647848",
-    "downloadedAt": "2026-01-16T04:16:01.795Z"
+    "modifiedTime": "2025-07-07T19:46:22.621Z",
+    "downloadedAt": "2026-01-19T15:53:29.008Z"
   },
   "19f4ZTqyTEc9oVMfF2fW0Qu64Xd23pAy9": {
     "fileId": "19f4ZTqyTEc9oVMfF2fW0Qu64Xd23pAy9",
     "filename": "MadJak.jpg",
     "filePath": "paintings\\MadJak.jpg",
     "size": "9544663",
-    "downloadedAt": "2026-01-16T04:16:02.843Z"
+    "modifiedTime": "2022-12-13T19:41:23.308Z",
+    "downloadedAt": "2026-01-19T15:53:31.076Z"
   },
   "197nhBid_PKoBU93l5kCuq848fg7D5S-E": {
     "fileId": "197nhBid_PKoBU93l5kCuq848fg7D5S-E",
     "filename": "TavernTrouble_4K-2025.jpg",
     "filePath": "paintings\\TavernTrouble_4K-2025.jpg",
     "size": "11080604",
-    "downloadedAt": "2026-01-16T04:16:04.025Z"
+    "modifiedTime": "2025-06-26T17:54:55.899Z",
+    "downloadedAt": "2026-01-19T15:53:32.498Z"
   }
 }
