better clean up of google drive download for site galleries, publish

--- a/public/gallery/downloadManifest.json
+++ b/public/gallery/downloadManifest.json
@@ -209,11 +209,11 @@
   },
   "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw": {
     "fileId": "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw",
-    "filename": "1_Wildcallers_03.jpg",
-    "filePath": "concept art\\1_Wildcallers_03.jpg",
+    "filename": "3_Wildcallers_03.jpg",
+    "filePath": "concept art\\3_Wildcallers_03.jpg",
     "size": "1942872",
-    "modifiedTime": "2026-01-19T15:54:26.910Z",
-    "downloadedAt": "2026-01-19T15:54:50.293Z"
+    "modifiedTime": "2026-01-19T15:59:50.512Z",
+    "downloadedAt": "2026-01-19T16:25:46.983Z"
   },
   "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me": {
     "fileId": "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me",
@@ -286,5 +286,13 @@
     "size": "11080604",
     "modifiedTime": "2025-06-26T17:54:55.899Z",
     "downloadedAt": "2026-01-19T15:53:32.498Z"
+  },
+  "1w-5PtG1ahmoYCn8fXSsBY69tHb1UgGuR": {
+    "fileId": "1w-5PtG1ahmoYCn8fXSsBY69tHb1UgGuR",
+    "filename": "2_Wildcallers_02.jpg",
+    "filePath": "concept art\\2_Wildcallers_02.jpg",
+    "size": "1810529",
+    "modifiedTime": "2026-01-19T15:59:33.383Z",
+    "downloadedAt": "2026-01-19T16:25:46.215Z"
   }
 }
