deleted too much, need to add back in resume images, publish

--- a/public/gallery/downloadManifest.json
+++ b/public/gallery/downloadManifest.json
@@ -1,11 +1,11 @@
 {
   "17jiVhrx-oGcZ0twrKHng9pnVPLF_Xgh3": {
     "fileId": "17jiVhrx-oGcZ0twrKHng9pnVPLF_Xgh3",
-    "filename": "BaronDauntek_4K.png",
-    "filePath": "concept art\\BaronDauntek_4K.png",
+    "filename": "1_BaronDauntek_4K.png",
+    "filePath": "concept art\\1_BaronDauntek_4K.png",
     "size": "7073062",
-    "modifiedTime": "2023-03-14T06:14:00.694Z",
-    "downloadedAt": "2026-01-19T15:52:50.720Z"
+    "modifiedTime": "2026-01-19T16:29:43.822Z",
+    "downloadedAt": "2026-01-21T00:09:42.134Z"
   },
   "1cbg47OKWsR7RDmv_NRMXyTExW3SjlOA9": {
     "fileId": "1cbg47OKWsR7RDmv_NRMXyTExW3SjlOA9",
@@ -89,11 +89,11 @@
   },
   "1-diizdDNh0LKcva9g5UqQRGkMtEp1ZvZ": {
     "fileId": "1-diizdDNh0LKcva9g5UqQRGkMtEp1ZvZ",
-    "filename": "Machi-CharacterConcept_4K.png",
-    "filePath": "concept art\\Machi-CharacterConcept_4K.png",
+    "filename": "0_Machi-CharacterConcept_4K.png",
+    "filePath": "concept art\\0_Machi-CharacterConcept_4K.png",
     "size": "6487293",
-    "modifiedTime": "2023-03-14T23:48:01.673Z",
-    "downloadedAt": "2026-01-19T15:53:02.976Z"
+    "modifiedTime": "2026-01-19T16:29:31.787Z",
+    "downloadedAt": "2026-01-21T00:09:40.409Z"
   },
   "1yNwhLkP26Jvy1l9f61ItEjEZf-GgRoFT": {
     "fileId": "1yNwhLkP26Jvy1l9f61ItEjEZf-GgRoFT",
@@ -193,11 +193,11 @@
   },
   "1m1BQLggQAujfVNBmIfWYK5zC79wS073j": {
     "fileId": "1m1BQLggQAujfVNBmIfWYK5zC79wS073j",
-    "filename": "0_Wildcallers_01.jpg",
-    "filePath": "concept art\\0_Wildcallers_01.jpg",
+    "filename": "1_Wildcallers_01.jpg",
+    "filePath": "concept art\\1_Wildcallers_01.jpg",
     "size": "3129697",
-    "modifiedTime": "2026-01-19T15:28:30.865Z",
-    "downloadedAt": "2026-01-19T15:52:49.049Z"
+    "modifiedTime": "2026-01-19T16:29:52.765Z",
+    "downloadedAt": "2026-01-21T00:09:43.201Z"
   },
   "1VI-8Qq1ssBouYRHW_OwQwaDXIlurLuI4": {
     "fileId": "1VI-8Qq1ssBouYRHW_OwQwaDXIlurLuI4",
@@ -209,11 +209,11 @@
   },
   "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw": {
     "fileId": "1JOxrLtqUaaTTrxRoWgvCUeB1HK2vruRw",
-    "filename": "3_Wildcallers_03.jpg",
-    "filePath": "concept art\\3_Wildcallers_03.jpg",
+    "filename": "2_Wildcallers_03.jpg",
+    "filePath": "concept art\\2_Wildcallers_03.jpg",
     "size": "1942872",
-    "modifiedTime": "2026-01-19T15:59:50.512Z",
-    "downloadedAt": "2026-01-19T16:25:46.983Z"
+    "modifiedTime": "2026-01-19T16:29:00.457Z",
+    "downloadedAt": "2026-01-21T00:09:43.933Z"
   },
   "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me": {
     "fileId": "1MIugmSwnrcQyoc1CiU2OSKQxLkltT8me",
@@ -289,10 +289,10 @@
   },
   "1w-5PtG1ahmoYCn8fXSsBY69tHb1UgGuR": {
     "fileId": "1w-5PtG1ahmoYCn8fXSsBY69tHb1UgGuR",
-    "filename": "2_Wildcallers_02.jpg",
-    "filePath": "concept art\\2_Wildcallers_02.jpg",
+    "filename": "3_Wildcallers_02.jpg",
+    "filePath": "concept art\\3_Wildcallers_02.jpg",
     "size": "1810529",
-    "modifiedTime": "2026-01-19T15:59:33.383Z",
-    "downloadedAt": "2026-01-19T16:25:46.215Z"
+    "modifiedTime": "2026-01-19T16:29:07.001Z",
+    "downloadedAt": "2026-01-21T00:09:44.912Z"
   }
 }
