updated download to also include .txt files

--- a/public/gallery/downloadManifest.json
+++ b/public/gallery/downloadManifest.json
@@ -294,5 +294,53 @@
     "size": "1810529",
     "modifiedTime": "2026-01-19T16:29:07.001Z",
     "downloadedAt": "2026-01-21T00:09:44.912Z"
+  },
+  "1HAouRJDyqyuBPizQAiuNDfdIJyVFxHie": {
+    "fileId": "1HAouRJDyqyuBPizQAiuNDfdIJyVFxHie",
+    "filename": "0_joe-tripplejaz-zavaletta-machi-splashka-final.jpg",
+    "filePath": "paintings\\$project_machi-splash\\0_joe-tripplejaz-zavaletta-machi-splashka-final.jpg",
+    "size": "568243",
+    "modifiedTime": "2026-01-21T05:42:53.000Z",
+    "downloadedAt": "2026-01-21T06:07:31.142Z"
+  },
+  "12HFwiAi0hQDldVXe_LAjKMh4l84wK-hh": {
+    "fileId": "12HFwiAi0hQDldVXe_LAjKMh4l84wK-hh",
+    "filename": "0_joe-tripplejaz-zavaletta-machi-splashka-thumbnails.jpg",
+    "filePath": "paintings\\$project_machi-splash\\0_joe-tripplejaz-zavaletta-machi-splashka-thumbnails.jpg",
+    "size": "280570",
+    "modifiedTime": "2026-01-21T00:47:05.000Z",
+    "downloadedAt": "2026-01-21T06:07:31.856Z"
+  },
+  "1sUFO-m6v91nhHDvurmFVlbUxZecu4wby": {
+    "fileId": "1sUFO-m6v91nhHDvurmFVlbUxZecu4wby",
+    "filename": "1_joe-tripplejaz-zavaletta-machi-splashka-r2-wip1.jpg",
+    "filePath": "paintings\\$project_machi-splash\\1_joe-tripplejaz-zavaletta-machi-splashka-r2-wip1.jpg",
+    "size": "415150",
+    "modifiedTime": "2026-01-21T00:47:09.000Z",
+    "downloadedAt": "2026-01-21T06:07:32.520Z"
+  },
+  "1KsL-J7PFeUXby0mCJHi_nBSYQoGIJg99": {
+    "fileId": "1KsL-J7PFeUXby0mCJHi_nBSYQoGIJg99",
+    "filename": "2_joe-tripplejaz-zavaletta-machi-splashka-r2-wip2.jpg",
+    "filePath": "paintings\\$project_machi-splash\\2_joe-tripplejaz-zavaletta-machi-splashka-r2-wip2.jpg",
+    "size": "398408",
+    "modifiedTime": "2026-01-21T00:47:14.000Z",
+    "downloadedAt": "2026-01-21T06:07:32.950Z"
+  },
+  "1D898-4ehTZvz2I3mrxSrVr451yDmx5UD": {
+    "fileId": "1D898-4ehTZvz2I3mrxSrVr451yDmx5UD",
+    "filename": "3_joe-tripplejaz-zavaletta-machi-splashka-r2-wip7.jpg",
+    "filePath": "paintings\\$project_machi-splash\\3_joe-tripplejaz-zavaletta-machi-splashka-r2-wip7.jpg",
+    "size": "372768",
+    "modifiedTime": "2026-01-21T00:47:18.000Z",
+    "downloadedAt": "2026-01-21T06:07:33.474Z"
+  },
+  "14gNCu91kivw_q_JTCUewhsFixBK5F9Ht": {
+    "fileId": "14gNCu91kivw_q_JTCUewhsFixBK5F9Ht",
+    "filename": "description.txt",
+    "filePath": "paintings\\$project_machi-splash\\description.txt",
+    "size": "216",
+    "modifiedTime": "2026-01-21T05:44:03.000Z",
+    "downloadedAt": "2026-01-21T06:07:34.276Z"
   }
 }
