--- a/public/gallery/imageManifest.json
+++ b/public/gallery/imageManifest.json
@@ -1,6 +1,6 @@
 {
-  "generated": "2026-01-21T06:20:33.576Z",
-  "totalImages": 70,
+  "generated": "2026-01-21T07:15:57.615Z",
+  "totalImages": 65,
   "images": [
     {
       "path": "concept art/0_Machi-CharacterConcept_4K.png",
@@ -199,48 +199,6 @@
       "height": 2160
     },
     {
-      "path": "paintings/$project_Machi-splash/0_joe-tripplejaz-zavaletta-machi-splashka-final.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/0_joe-tripplejaz-zavaletta-machi-splashka-final.webp",
-      "blurHash": "LLE.3W}*xEInE4EK,-wuNfOrNztm",
-      "width": 1920,
-      "height": 1080
-    },
-    {
-      "path": "paintings/$project_Machi-splash/0_joe-tripplejaz-zavaletta-machi-splashka-thumbnails.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/0_joe-tripplejaz-zavaletta-machi-splashka-thumbnails.webp",
-      "blurHash": "L8CsjjRj?bofD%%MM{RjWBt7~qM{",
-      "width": 1920,
-      "height": 1465
-    },
-    {
-      "path": "paintings/$project_Machi-splash/1_joe-tripplejaz-zavaletta-machi-splashka-r2-wip1.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/1_joe-tripplejaz-zavaletta-machi-splashka-r2-wip1.webp",
-      "blurHash": "LKI:;L_};oH?@=Kk+t=t9u5,TeWF",
-      "width": 1920,
-      "height": 1080
-    },
-    {
-      "path": "paintings/$project_Machi-splash/2_joe-tripplejaz-zavaletta-machi-splashka-r2-wip2.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/2_joe-tripplejaz-zavaletta-machi-splashka-r2-wip2.webp",
-      "blurHash": "L9ELgi@q9P56M^Gazn=W4_D~*0WZ",
-      "width": 1920,
-      "height": 1080
-    },
-    {
-      "path": "paintings/$project_Machi-splash/3_joe-tripplejaz-zavaletta-machi-splashka-r2-wip7.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/3_joe-tripplejaz-zavaletta-machi-splashka-r2-wip7.webp",
-      "blurHash": "LBDk_t}9jM9~5T5+,,wGXDNaJ8t.",
-      "width": 1920,
-      "height": 1080
-    },
-    {
-      "path": "paintings/$project_Machi-splash/4_joe-tripplejaz-zavaletta-machi-splashka-final-nofx.jpg",
-      "thumbnailPath": "_thumbnails/paintings/$project_Machi-splash/4_joe-tripplejaz-zavaletta-machi-splashka-final-nofx.webp",
-      "blurHash": "LKFO4m}?xDI:IWE0,mwGS+OYOatT",
-      "width": 1920,
-      "height": 1080
-    },
-    {
       "path": "paintings/Fairy slug_UPDATE.jpg",
       "thumbnailPath": "_thumbnails/paintings/Fairy slug_UPDATE.webp",
       "blurHash": "LMCXygI=ofxG}WIps.s.-URkSNj[",
@@ -288,6 +246,13 @@
       "blurHash": "LnG]5LDQNFt6?dRhn#oLRqxot3jF",
       "width": 3432,
       "height": 1815
+    },
+    {
+      "path": "paintings/N$project_test/joe-tripplejaz-zavaletta-flyingmen-3thumb.jpg",
+      "thumbnailPath": "_thumbnails/paintings/N$project_test/joe-tripplejaz-zavaletta-flyingmen-3thumb.webp",
+      "blurHash": "LBFPHS~q9F00~WRj_3%MD%IURjof",
+      "width": 1920,
+      "height": 1424
     },
     {
       "path": "paintings/TavernTrouble_4K-2025.jpg",
